troisieme-commit responsive

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li>Contact</li>
             <li>About</li>
         </ul>
+        <div id="icons"></div>
         <hr>
         <img src="./Photos/pexels-lisa-fotios-1882410.jpg" alt="">
         <div id="men">
