--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,7 @@
             <li>Contact</li>
             <li>About</li>
         </ul>
+        <div id="icons"></div>
         <hr>
     </nav> 
     <div id="contenair">
